updated description file

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,11 @@
 Package: NBA.package
-Title: What the Package Does (One Line, Title Case)
+Title: NBA theme package
 Version: 0.0.0.9000
 Authors@R: 
-    person("First", "Last", , "first.last@example.com", role = c("aut", "cre"),
-           comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: What the package does (one paragraph).
+    person("Natasha", "Besseling", , "tashbes@gmail.com", role = c("aut", "cre"))
+    person("Lauryn", "Bull", , "l.bull@sanbi.org.za", role = c("aut", "cre"))
+    person("Maphale", "Monyeki", , "seithati.neoza@gmail.com", role = c("aut", "cre"))
+Description: Creates standard themes for graphical outputs of the NBA
 License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
     license
 Encoding: UTF-8
