--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,8 +6,7 @@ Authors@R:
     person("Lauryn", "Bull", , "l.bull@sanbi.org.za", role = c("aut", "cre"))
     person("Maphale", "Monyeki", , "seithati.neoza@gmail.com", role = c("aut", "cre"))
 Description: Creates standard themes for graphical outputs of the NBA
-License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
-    license
+License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.1
