--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,3 +15,5 @@ Suggests:
 Config/testthat/edition: 3
 Imports: 
     ggplot2
+URL: https://github.com/TashBes/NBA.package
+BugReports: https://github.com/TashBes/NBA.package/issues
