--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,11 +5,12 @@ Authors@R:
     person("Natasha", "Besseling", , "tashbes@gmail.com", role = c("aut", "cre"))
     person("Lauryn", "Bull", , "l.bull@sanbi.org.za", role = c("aut", "cre"))
     person("Maphale", "Monyeki", , "seithati.neoza@gmail.com", role = c("aut", "cre"))
-Description: Creates standard themes for graphical outputs of the NBA
+    person("Shae-Lynn", "Hendricks", "Shaelynnsampson4@gmail.com", role = c("aut", "cre"))
+Description: Creates standard themes for graphical outputs of the NBA.
 License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.3.1
+RoxygenNote: 7.3.2
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
