--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: NBA.package
 Title: NBA theme package
 Version: 0.0.1
-Authors@R: 
+Authors@: 
     person("Natasha", "Besseling", , "tashbes@gmail.com", role = c("aut", "cre"))
     person("Lauryn", "Bull", , "l.bull@sanbi.org.za", role = c("aut", "cre"))
     person("Maphale", "Monyeki", , "seithati.neoza@gmail.com", role = c("aut", "cre"))
