--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: NBA.package
 Title: NBA theme package
 Version: 0.0.1
-Authors@: 
+Authors@R: 
     person("Natasha", "Besseling", , "tashbes@gmail.com", role = c("aut", "cre"))
     person("Lauryn", "Bull", , "l.bull@sanbi.org.za", role = c("aut", "cre"))
     person("Maphale", "Monyeki", , "seithati.neoza@gmail.com", role = c("aut", "cre"))
-    person("Shae-Lynn", "Hendricks", "Shaelynnsampson4@gmail.com", role = c("aut", "cre"))
+    person("Shae-Lynn", "Hendricks", , "Shaelynnsampson4@gmail.com", role = c("aut", "cre"))
 Description: Creates standard themes for graphical outputs of the NBA.
 License: MIT + file LICENSE
 Encoding: UTF-8
