trying to fix merge changes

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,6 +17,7 @@ Config/testthat/edition: 3
 Imports: 
     ggplot2,
     dplyr,
-    kableExtra
+    kableExtra,
+    tidyr
 URL: https://github.com/TashBes/NBA.package
 BugReports: https://github.com/TashBes/NBA.package/issues
