--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,7 +11,10 @@ export(thr_tbl)
 importFrom(dplyr,arrange)
 importFrom(dplyr,case_when)
 importFrom(dplyr,count)
+importFrom(dplyr,group_by)
 importFrom(dplyr,mutate)
+importFrom(dplyr,summarise)
+importFrom(dplyr,ungroup)
 importFrom(ggplot2,coord_flip)
 importFrom(ggplot2,coord_polar)
 importFrom(ggplot2,geom_bar)
@@ -37,3 +40,4 @@ importFrom(kableExtra,column_spec)
 importFrom(kableExtra,kable)
 importFrom(kableExtra,kable_styling)
 importFrom(kableExtra,row_spec)
+importFrom(tidyr,pivot_longer)
