added example data

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -21,3 +21,6 @@ Imports:
     tidyr
 URL: https://github.com/TashBes/NBA.package
 BugReports: https://github.com/TashBes/NBA.package/issues
+Depends: 
+    R (>= 2.10)
+LazyData: true
