--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,11 +3,8 @@
 export(NBA_plot)
 export(RLI_plot)
 export(basic_tbl)
-export(pro_donut_plot)
-export(prot_efg)
-export(thr_donut_plot)
-export(thr_efg)
 export(thr_tbl)
+importFrom(dplyr,across)
 importFrom(dplyr,arrange)
 importFrom(dplyr,case_when)
 importFrom(dplyr,count)
@@ -15,22 +12,31 @@ importFrom(dplyr,group_by)
 importFrom(dplyr,mutate)
 importFrom(dplyr,summarise)
 importFrom(dplyr,ungroup)
+importFrom(ggplot2,aes)
 importFrom(ggplot2,coord_flip)
 importFrom(ggplot2,coord_polar)
+importFrom(ggplot2,element_blank)
+importFrom(ggplot2,element_rect)
+importFrom(ggplot2,element_text)
 importFrom(ggplot2,geom_bar)
 importFrom(ggplot2,geom_line)
 importFrom(ggplot2,geom_rect)
 importFrom(ggplot2,geom_ribbon)
 importFrom(ggplot2,geom_text)
 importFrom(ggplot2,ggplot)
+importFrom(ggplot2,ggsave)
+importFrom(ggplot2,guide_legend)
 importFrom(ggplot2,guides)
 importFrom(ggplot2,labs)
+importFrom(ggplot2,margin)
+importFrom(ggplot2,position_stack)
 importFrom(ggplot2,scale_fill_manual)
 importFrom(ggplot2,scale_y_continuous)
 importFrom(ggplot2,theme)
 importFrom(ggplot2,theme_classic)
 importFrom(ggplot2,theme_minimal)
 importFrom(ggplot2,theme_void)
+importFrom(ggplot2,vars)
 importFrom(ggplot2,xlab)
 importFrom(ggplot2,xlim)
 importFrom(ggplot2,ylab)
@@ -40,4 +46,5 @@ importFrom(kableExtra,column_spec)
 importFrom(kableExtra,kable)
 importFrom(kableExtra,kable_styling)
 importFrom(kableExtra,row_spec)
+importFrom(magrittr,"%>%")
 importFrom(tidyr,pivot_longer)
