--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,11 +3,11 @@
 export(NBA_plot)
 export(RLI_plot)
 export(basic_tbl)
+export(colr_tbl)
 export(pro_donut_plot)
 export(prot_efg)
 export(thr_donut_plot)
 export(thr_efg)
-export(thr_tbl)
 importFrom(dplyr,arrange)
 importFrom(dplyr,case_when)
 importFrom(dplyr,count)
