--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,9 +2,9 @@ Package: NBA.package
 Title: NBA theme package
 Version: 0.7.3
 Authors@R: c(
-    person("Natasha", "Besseling", , "tashbes@gmail.com", role = c("aut", "cre"))
-    person("Lauryn", "Bull", , "l.bull@sanbi.org.za", role = c("aut", "cre"))
-    person("Maphale", "Monyeki", , "seithati.neoza@gmail.com", role = c("aut"))
+    person("Natasha", "Besseling", , "tashbes@gmail.com", role = c("aut", "cre")),
+    person("Lauryn", "Bull", , "l.bull@sanbi.org.za", role = c("aut")),
+    person("Maphale", "Monyeki", , "seithati.neoza@gmail.com", role = c("aut")),
     person("Shae-Lynn", "Hendricks", , "Shaelynnsampson4@gmail.com", role = c("aut"))
     )
 Description: Creation of standard themes for graphical outputs of the NBA.
