added a map function

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,7 +19,9 @@ Imports:
     ggpubr,
     kableExtra,
     magrittr,
-    tidyr
+    tidyr,
+    sf,
+    ggspatial
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
