--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(NBA_map)
 export(NBA_plot)
 export(NBA_plot_comb)
+export(NBA_theme)
 export(RLI_plot)
 export(basic_tbl)
 export(colr_tbl)
@@ -20,6 +21,7 @@ importFrom(ggplot2,aes)
 importFrom(ggplot2,coord_flip)
 importFrom(ggplot2,coord_polar)
 importFrom(ggplot2,element_blank)
+importFrom(ggplot2,element_line)
 importFrom(ggplot2,element_rect)
 importFrom(ggplot2,element_text)
 importFrom(ggplot2,geom_bar)
