I added @lizevons function for a gt table theme. The only thing I changed was to make the GT_TBL parameter name uppercase and shortened table to tbl. This addresses and closes issue #22. Thank you Lize for the great function!

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -21,7 +21,8 @@ Imports:
     magrittr,
     tidyr,
     sf,
-    ggspatial
+    ggspatial,
+    gt
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
