--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(NBA_theme)
 export(RLI_plot)
 export(basic_tbl)
 export(colr_tbl)
+export(gt_theme_nba)
 importFrom(dplyr,across)
 importFrom(dplyr,arrange)
 importFrom(dplyr,case_when)
@@ -51,6 +52,13 @@ importFrom(ggpubr,ggarrange)
 importFrom(ggspatial,annotation_north_arrow)
 importFrom(ggspatial,annotation_scale)
 importFrom(ggspatial,north_arrow_orienteering)
+importFrom(gt,cell_borders)
+importFrom(gt,cell_fill)
+importFrom(gt,cell_text)
+importFrom(gt,cells_body)
+importFrom(gt,cells_column_labels)
+importFrom(gt,px)
+importFrom(gt,tab_style)
 importFrom(kableExtra,add_header_above)
 importFrom(kableExtra,column_spec)
 importFrom(kableExtra,kable)
