--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,8 @@ Authors@R: c(
     person("Natasha", "Besseling", , "tashbes@gmail.com", role = c("aut", "cre")),
     person("Lauryn", "Bull", , "l.bull@sanbi.org.za", role = c("aut")),
     person("Maphale", "Monyeki", , "seithati.neoza@gmail.com", role = c("aut")),
-    person("Shae-Lynn", "Hendricks", , "Shaelynnsampson4@gmail.com", role = c("aut"))
+    person("Shae-Lynn", "Hendricks", , "Shaelynnsampson4@gmail.com", role = c("aut")),
+    person("Lize", "von Staden", , "L.vonStaden@sanbi.org.za", role = c("aut"))
     )
 Description: Creation of standard themes for graphical outputs of the NBA.
 License: MIT + file LICENSE
