--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ importFrom(dplyr,count)
 importFrom(dplyr,filter)
 importFrom(dplyr,group_by)
 importFrom(dplyr,mutate)
+importFrom(dplyr,na_if)
 importFrom(dplyr,pick)
 importFrom(dplyr,summarise)
 importFrom(dplyr,ungroup)
