fixed the error in the yml file

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -29,5 +29,5 @@ reference:
   - NBA_example_thr_data
   - NBA_example_pro_data
   - NBA_example_RLI_data
-  - NBA_example_map_data.
+  - NBA_example_map_data
   - NBA_categories
