added NBA_example_comb_data to yml

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -28,6 +28,7 @@ reference:
   contents:
   - NBA_example_thr_data
   - NBA_example_pro_data
+  - NBA_example_comb_data
   - NBA_example_RLI_data
   - NBA_example_map_data
   - NBA_categories
