added a new function for a table of protection level of threatened ecosystems

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,16 +7,21 @@ export(NBA_plot_comb)
 export(NBA_plot_theme)
 export(NBA_tbl)
 export(NBA_tbl_colr)
+export(NBA_tbl_comb)
 export(NBA_tbl_theme)
 importFrom(dplyr,across)
 importFrom(dplyr,arrange)
+importFrom(dplyr,bind_rows)
 importFrom(dplyr,case_when)
 importFrom(dplyr,count)
+importFrom(dplyr,distinct)
 importFrom(dplyr,filter)
 importFrom(dplyr,group_by)
 importFrom(dplyr,mutate)
 importFrom(dplyr,na_if)
 importFrom(dplyr,pick)
+importFrom(dplyr,select)
+importFrom(dplyr,slice)
 importFrom(dplyr,summarise)
 importFrom(dplyr,ungroup)
 importFrom(ggplot2,aes)
@@ -65,7 +70,10 @@ importFrom(kableExtra,column_spec)
 importFrom(kableExtra,kable)
 importFrom(kableExtra,kable_styling)
 importFrom(kableExtra,row_spec)
+importFrom(knitr,kable)
 importFrom(magrittr,"%>%")
 importFrom(sf,st_geometry_type)
 importFrom(sf,st_union)
 importFrom(tidyr,pivot_longer)
+importFrom(tidyr,pivot_wider)
+importFrom(tidyselect,all_of)
