--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,9 +18,11 @@ Imports:
     dplyr,
     ggplot2,
     ggpubr,
+    knitr,
     kableExtra,
     magrittr,
     tidyr,
+    tidyselect,
     sf,
     ggspatial,
     gt
