--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,12 +3,14 @@
 export(NBA_map)
 export(NBA_plot)
 export(NBA_plot_RLI)
+export(NBA_plot_bubble)
 export(NBA_plot_comb)
 export(NBA_plot_theme)
 export(NBA_tbl)
 export(NBA_tbl_colr)
 export(NBA_tbl_comb)
 export(NBA_tbl_theme)
+importFrom(RColorBrewer,brewer.pal)
 importFrom(dplyr,across)
 importFrom(dplyr,arrange)
 importFrom(dplyr,bind_rows)
@@ -24,6 +26,8 @@ importFrom(dplyr,select)
 importFrom(dplyr,slice)
 importFrom(dplyr,summarise)
 importFrom(dplyr,ungroup)
+importFrom(ggh4x,facet_grid2)
+importFrom(ggh4x,strip_themed)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,coord_flip)
 importFrom(ggplot2,coord_polar)
@@ -33,22 +37,31 @@ importFrom(ggplot2,element_rect)
 importFrom(ggplot2,element_text)
 importFrom(ggplot2,geom_bar)
 importFrom(ggplot2,geom_line)
+importFrom(ggplot2,geom_point)
 importFrom(ggplot2,geom_rect)
 importFrom(ggplot2,geom_ribbon)
 importFrom(ggplot2,geom_text)
 importFrom(ggplot2,ggplot)
 importFrom(ggplot2,ggsave)
+importFrom(ggplot2,guide_axis)
 importFrom(ggplot2,guide_legend)
 importFrom(ggplot2,guides)
+importFrom(ggplot2,label_wrap_gen)
+importFrom(ggplot2,labeller)
 importFrom(ggplot2,labs)
 importFrom(ggplot2,margin)
 importFrom(ggplot2,position_stack)
+importFrom(ggplot2,scale_colour_brewer)
+importFrom(ggplot2,scale_fill_brewer)
 importFrom(ggplot2,scale_fill_manual)
+importFrom(ggplot2,scale_size)
+importFrom(ggplot2,scale_x_discrete)
 importFrom(ggplot2,scale_y_continuous)
 importFrom(ggplot2,theme)
 importFrom(ggplot2,theme_classic)
 importFrom(ggplot2,theme_minimal)
 importFrom(ggplot2,theme_void)
+importFrom(ggplot2,unit)
 importFrom(ggplot2,vars)
 importFrom(ggplot2,xlab)
 importFrom(ggplot2,xlim)
