--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -32,5 +32,6 @@ reference:
   - NBA_example_pro_data
   - NBA_example_comb_data
   - NBA_example_RLI_data
+  - NBA_example_bubble_data
   - NBA_example_map_data
   - NBA_categories
