--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -1,4 +1,4 @@
-url: https://sanbi-nba.github.io/NBA.package/
+url: https://sanbi-nba.github.io/nbaR/
 template:
   bootstrap: 5
   light-switch: true
