updated nba_init_quarto_docs to make a whole project

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -90,3 +90,4 @@ importFrom(sf,st_union)
 importFrom(tidyr,pivot_longer)
 importFrom(tidyr,pivot_wider)
 importFrom(tidyselect,all_of)
+importFrom(usethis,create_project)
