corrected RLI graph function and added Rlang to Descr.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -89,6 +89,9 @@ importFrom(kableExtra,row_spec)
 importFrom(knitr,current_input)
 importFrom(knitr,kable)
 importFrom(magrittr,"%>%")
+importFrom(rlang,"!!")
+importFrom(rlang,enquo)
+importFrom(rlang,quo_is_null)
 importFrom(sf,st_geometry_type)
 importFrom(sf,st_union)
 importFrom(tidyr,pivot_longer)
