updated coloured table to colour the header and improve the table. close #43

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -79,7 +79,9 @@ importFrom(gt,cell_fill)
 importFrom(gt,cell_text)
 importFrom(gt,cells_body)
 importFrom(gt,cells_column_labels)
+importFrom(gt,gt)
 importFrom(gt,px)
+importFrom(gt,tab_options)
 importFrom(gt,tab_style)
 importFrom(kableExtra,add_header_above)
 importFrom(kableExtra,column_spec)
@@ -90,11 +92,14 @@ importFrom(knitr,current_input)
 importFrom(knitr,kable)
 importFrom(magrittr,"%>%")
 importFrom(rlang,"!!")
+importFrom(rlang,as_name)
 importFrom(rlang,enquo)
 importFrom(rlang,quo_is_null)
+importFrom(scales,col_factor)
 importFrom(sf,st_geometry_type)
 importFrom(sf,st_union)
 importFrom(tidyr,pivot_longer)
 importFrom(tidyr,pivot_wider)
 importFrom(tidyselect,all_of)
+importFrom(tidyselect,everything)
 importFrom(usethis,create_project)
