--- a/NAMESPACE
+++ b/NAMESPACE
@@ -102,4 +102,5 @@ importFrom(tidyr,pivot_longer)
 importFrom(tidyr,pivot_wider)
 importFrom(tidyselect,all_of)
 importFrom(tidyselect,everything)
+importFrom(tidyterra,geom_spatraster)
 importFrom(usethis,create_project)
