--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(nba_plot_RLI)
 export(nba_plot_bubble)
 export(nba_plot_comb)
 export(nba_plot_theme)
+export(nba_pressure_bar_plot)
 export(nba_tbl)
 export(nba_tbl_colr)
 export(nba_tbl_comb)
@@ -38,7 +39,9 @@ importFrom(ggplot2,element_blank)
 importFrom(ggplot2,element_line)
 importFrom(ggplot2,element_rect)
 importFrom(ggplot2,element_text)
+importFrom(ggplot2,facet_wrap)
 importFrom(ggplot2,geom_bar)
+importFrom(ggplot2,geom_col)
 importFrom(ggplot2,geom_line)
 importFrom(ggplot2,geom_point)
 importFrom(ggplot2,geom_rect)
@@ -98,6 +101,8 @@ importFrom(rlang,quo_is_null)
 importFrom(scales,col_factor)
 importFrom(sf,st_geometry_type)
 importFrom(sf,st_union)
+importFrom(stats,setNames)
+importFrom(stringr,str_wrap)
 importFrom(tidyr,pivot_longer)
 importFrom(tidyr,pivot_wider)
 importFrom(tidyselect,all_of)
