--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -13,6 +13,7 @@ reference:
   - nba_plot_RLI
   - nba_plot_bubble
   - nba_plot_theme
+  - nba_pressure_bar_plot
 
 
 - title: Table functions
@@ -39,6 +40,7 @@ reference:
   - NBA_example_comb_data
   - NBA_example_RLI_data
   - NBA_example_bubble_data
+  - NBA_press_bar_example_data
   - NBA_example_map_data
   - NBA_categories
   - NBA_colours
