updated the RLI fun - unified fun for RLIs RLIe and EPLI. Renamed to nba_index_plot

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -10,7 +10,7 @@ reference:
   contents:
   - nba_plot
   - nba_plot_comb
-  - nba_plot_RLI
+  - nba_index_plot
   - nba_plot_bubble
   - nba_plot_theme
   - nba_pressure_bar_plot
