--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -33,7 +33,9 @@ Imports:
     rlang,
     scales,
     tidyterra,
-    stringr
+    stringr,
+    RColorBrewer,
+    purrr
 Suggests: 
     rmarkdown,
     learnr,
