--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -40,6 +40,11 @@ reference:
   - NBA_example_comb_data
   - NBA_example_bubble_data
   - NBA_press_bar_example_data
+  - NBA_rlis_biome_example_data
+  - NBA_rlis_example_data
+  - NBA_rlie_example_data
+  - NBA_epli2018_example_data
+  - NBA_epli2024_example_data
   - NBA_example_map_data
   - NBA_categories
   - NBA_colours
