--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -39,12 +39,11 @@ reference:
   - NBA_example_pro_data
   - NBA_example_comb_data
   - NBA_example_bubble_data
-  - NBA_press_bar_example_data
-  - NBA_rlis_biome_example_data
-  - NBA_rlis_example_data
-  - NBA_rlie_example_data
-  - NBA_epli2018_example_data
-  - NBA_epli2024_example_data
+  - NBA_example_press_bar_data
+  - NBA_example_rlis_data
+  - NBA_example_rlie_data
+  - NBA_example_epli2018_data
+  - NBA_example_epli2024_data
   - NBA_example_map_data
   - NBA_categories
   - NBA_colours
